--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,8 @@
         "target": "es5",
         "jsx": "react"
     },
-    "files": [
-        "./typings/index.d.ts",
-        "./src/components/Hello.tsx",
-        "./src/index.tsx"
+	"exclude": [
+        "node_modules"
     ],
     "compileOnSave": false
 }
