--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,13 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
         "module": "commonjs",
         "target": "es5",
-        "jsx": "react"
+        "jsx": "react",
+        "strictNullChecks": true
     },
-    "files": [
-        "./typings/index.d.ts",
-        "./src/components/Hello.tsx",
-        "./src/index.tsx"
-    ],
-    "compileOnSave": false
+    "include": [
+        "src/**/*"
+    ]
 }
